--- a/src/components/text/index.module.scss
+++ b/src/components/text/index.module.scss
@@ -11,19 +11,20 @@
 	@include typography(18, 400, 'Open Sans');
 }
 
-.open-sans {
+.open_sans {
 	font-family: 'Open Sans', sans-serif;
 }
 
 .ubuntu {
+	font-size: 30px;
 	font-family: 'Ubuntu', sans-serif;
 }
 
-.cormorant-garamond {
+.cormorant_garamond {
 	font-family: 'Cormorant Garamond', sans-serif;
 }
 
-.days-one {
+.days_one {
 	font-family: 'Days One', sans-serif;
 }
 
