--- a/src/components/arrow-button/ArrowButton.module.scss
+++ b/src/components/arrow-button/ArrowButton.module.scss
@@ -10,6 +10,7 @@
 	height: 100px;
 	background-color: #000000;
 	border-right: 1px;
+	cursor: pointer;
 	transition: transform 0.5s ease;
 }
 
@@ -27,4 +28,12 @@
 
 .arrow_open {
 	transform: rotate(0deg);
+}
+
+.button:hover {
+	background: var(--gold, #ffc802);
+}
+
+.button:active {
+	background: rgb(120 120 120 / 100%);
 }
